Add basic PWA support

--- a/index.html
+++ b/index.html
@@ -7,9 +7,23 @@
     <title>Pushups</title>
     <link rel="stylesheet" href="https://bootswatch.com/5/zephyr/bootstrap.min.css">
     <link rel="stylesheet" href="./static/main.css">
+
+    <link rel="manifest" href="./static/manifest.json">
+
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="Pushups">
+    <meta name="apple-mobile-web-app-title" content="Pushups">
+    <meta name="theme-color" content="#3459e6">
+    <meta name="msapplication-navbutton-color" content="#3459e6">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="msapplication-starturl" content="/pushups/">
+
+    <link rel="icon" type="image/png" sizes="192x192" href="./static/icons/icon-192x192.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="192x192" href="./static/icons192.png">
   </head>
   <body>
     <div id='root'></div>
-	<script src="./static/bundle.js"></script>
+	<script src="./index.js"></script>
   </body>
 </html>
