--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
     <meta name="msapplication-navbutton-color" content="#3459e6">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="msapplication-starturl" content="/pushups/">
-
     <link rel="icon" type="image/png" sizes="192x192" href="./static/icons/icon-192x192.png">
     <link rel="apple-touch-icon" type="image/png" sizes="192x192" href="./static/icons192.png">
+
+    <meta property="og:title" content="More Pushups" />
+    <meta property="og:description" content="Increase your pushups every day" />
+    <meta property="og:image" content="./static/ogimage.jpg" />
   </head>
   <body>
     <div id='root'></div>
