--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <meta property="og:title" content="More Pushups" />
     <meta property="og:description" content="Increase your pushups every day" />
     <meta property="og:image" content="./static/ogimage.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
   </head>
   <body>
     <div id='root'></div>
