--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <meta property="og:title" content="More Pushups" />
     <meta property="og:description" content="Increase your pushups every day" />
-    <meta property="og:image" content="./static/ogimage.jpg" />
+    <meta property="og:image" content="https://benkaiser.github.io/pushups/static/ogimage.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
   </head>
