--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   </head>
   <body>
     <div id='root'></div>
-	<script src="./index.js"></script>
+    <script src="https://notification.kaiser.lol/lib.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
